fix activity table overflow

--- a/styles/Activity.css
+++ b/styles/Activity.css
@@ -13,6 +13,8 @@
   background-color: #211c2454;
   padding: 15px;
   box-shadow: 0px 0px 5px #312936;
+  overflow-x: scroll;
+  overflow-y: hidden;
 }
 .activityTableEntry {
   max-width: 150px;
